crates/atlas-runtime/tests/snapshots/interpreter__assignment_array_index.snap
---
source: crates/atlas-runtime/tests/interpreter.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Index:
        target:
          Identifier:
            name: arr
            span:
              start: 0
              end: 3
        index:
          Literal:
            - Number: 0
            - start: 4
              end: 5
        span:
          start: 0
          end: 6
    value:
      Literal:
        - Number: 42
        - start: 9
          end: 11
    span:
      start: 0
      end: 12
