crates/atlas-runtime/tests/snapshots/interpreter__assignment_boolean_value.snap
---
source: crates/atlas-runtime/tests/interpreter.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: flag
        span:
          start: 0
          end: 4
    value:
      Literal:
        - Bool: true
        - start: 7
          end: 11
    span:
      start: 0
      end: 12
