crates/atlas-runtime/tests/snapshots/interpreter__assignment_function_call_value.snap
---
source: crates/atlas-runtime/tests/interpreter.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: result
        span:
          start: 0
          end: 6
    value:
      Call:
        callee:
          Identifier:
            name: foo
            span:
              start: 9
              end: 12
        args: []
        span:
          start: 9
          end: 14
    span:
      start: 0
      end: 15
