crates/atlas-runtime/tests/snapshots/interpreter__assignment_null_value.snap
---
source: crates/atlas-runtime/tests/interpreter.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: value
        span:
          start: 0
          end: 5
    value:
      Literal:
        - "Null"
        - start: 8
          end: 12
    span:
      start: 0
      end: 13
