crates/atlas-runtime/tests/snapshots/interpreter__chained_array_assignment.snap
---
source: crates/atlas-runtime/tests/interpreter.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Index:
        target:
          Index:
            target:
              Identifier:
                name: matrix
                span:
                  start: 0
                  end: 6
            index:
              Identifier:
                name: row
                span:
                  start: 7
                  end: 10
            span:
              start: 0
              end: 11
        index:
          Identifier:
            name: col
            span:
              start: 12
              end: 15
        span:
          start: 0
          end: 16
    value:
      Identifier:
        name: value
        span:
          start: 19
          end: 24
    span:
      start: 0
      end: 25
